@@ -6,6 +6,7 @@ unity (7.4.0+16.04.20160526.1-0ubuntu2) UNRELEASED; urgency=medium
 
   [ Andrea Azzarone ]
   * Add whitelist for auto-repated keys. (LP: #1586491)
+  * Fix scale window activation if in show desktop mode. (LP: #1582056)
 
  -- Eleni Maria Stea <elenimaria.stea@canonical.com>  Wed, 29 Jun 2016 18:06:42 +0200
 
